--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				<ul class="nav navbar-nav">
 					
 					<li class="menuItem"><a href="#scope">Home</a></li>
-					<li class="menuItem"><a href="#submission">Submit</a></li>
+					<li class="menuItem"><a href="#submit">Submission</a></li>
 					<li class="menuItem"><a href="#program">Program</a></li>
 					<li class="menuItem"><a href="#invited">Invited Speakers</a></li>
 					<li class="menuItem"><a href="#organizers">Organizers</a></li>	
